--- a/p_css/homepagecss.css
+++ b/p_css/homepagecss.css
@@ -3,7 +3,7 @@
     height: 81px;
     box-shadow: 0 0  10px rgba(0,0,0,0.2);
     position: fixed;
-    z-index: 1;
+    z-index: 9999;
     background-color: white;
 }
 
@@ -37,6 +37,24 @@
     float: right;
     position: relative;
 }
+
+#menu-line{
+    position: absolute;
+    bottom: 0;
+    height: 3px;
+    background-color: #009ae1;
+    transition: all 0.25s ease-out;
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    -ms-transition: all 0.25s ease-out;
+    -o-transition: all 0.25s ease-out;
+}
+
+.head_title:hover{
+    color: #009ae1;
+    display: block;
+}
+
 .head_title_ul{
     overflow: hidden;
     float: left;
@@ -107,7 +125,7 @@
     position: relative;
 }
 
-.head_title:hover,.language_div:hover{
+.language_div:hover{
     color: #009ae1;
     display: block;
 }
@@ -153,32 +171,252 @@
     width: 40%;
     height: 700px;
     background-color: #3E8DDC;
-    float: right;
+    float: left;
 }
 
 .content_div{
     width: 1200px;
     margin: 0 auto;
     height: 700px;
-    background-color: #aa2233;
     position: relative;
-    z-index:1;
+}
+.content_view{
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .content_div_left{
-    width: 60%;
-    height: 700px;
-    position: relative;
-    background-color: #333333;
+    width: 66%;
+    background-color: #F7F7F7;
     float: left;
-    z-index:2;
+    height: 640px;
+    padding-top: 60px;
 }
 
 .content_div_right{
-    width: 40%;
-    height: 700px;
-    background-color: #668811;
+    width: 34%;
+    background-color: #3E8DDC;
+    float: left;
+    height: 640px;
+    padding-top: 60px;
+}
+
+.txt-title{
+    color: #000;
+    font-size: 30px;
+    line-height: 150%;
+}
+
+.txt-content{
+    color: #000;
+    font-size: 14px;
+    line-height: 210%;
+}
+
+.txt-a{
+    color: black;
+    text-decoration: underline;
+    font-size: 14px;
+}
+
+.txt-a:hover{
+    color: #009ae1;
+}
+
+.txt-num{
+    font-size: 35px;
+    color: white;
+    float: left;
+}
+.content_right_text1{
+    margin-left: 80px;
+}
+.content_right_text2{
+    margin-left: 80px;
+    margin-top: 120px;
+}
+.content_right_text3{
+    margin-left: 80px;
+    margin-top: 240px;
+}
+.content_right_text1 span em,.content_right_text2 span em,.content_right_text3 span em{
+    font-size: 22px;
+    padding: 3px 0 0 5px;
+    float: left;
+    color:  white;
+}
+
+.content_right_text1 small,.content_right_text2 small,.content_right_text3 small {
+    float: left;
+    width: 100%;
+    font-size: 14px;
+    color: #cbe5ff;
+    line-height: 220%;
+}
+
+#box-professionalteam{
+    width: 100%;
+    height: 780px;
+    float: left;
     position: relative;
+    margin-top: -170px;
+}
+
+.professionalteam{
+    width: 1200px;
+    margin: 0 auto;
+    height: 280px;
+    border-radius: 10px;
+    background-image: url("../images/index_team.jpg");
+}
+
+.teamdiv{
+    margin-left: 60px;
+    padding-top: 40px;
+}
+
+.data-type,.module_view{
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.professionalteam-txt1{
+    color: white;
+    font-size: 24px;
+    line-height: 50px;
+}
+
+.professionalteam-txt2{
+    color: white;
+    font-size: 14px;
+    line-height: 30px;
+}
+
+.data_type_box{
+    width: 190px;
+    float: left;
+    padding: 40px 25px 20px 25px;
+    box-shadow: 0 0 1px #ccc;
+}
+
+.data_type_box:hover{
+    box-shadow: 0 0 10px #aaa;
+    background-color: white;
+}
+.data_type_box p{
+    float: left;
+    color: #0756af;
+    font-size: 16px;
+    height: 45px;
+    width: 100%;
+    font-weight: bold;
+}
+
+.data_type_box span{
+    float: left;
+    color: #333;
+    font-size: 14px;
+    line-height: 24px;
+    margin-top: 20px;
+    height: 100px;
+}
+
+#box-module{
+    width: 100%;
+    background-image: url("../images/index_kehu_bg.jpg");
+    height: 540px;
+    float: left;
+}
+#box-foot{
+    width: 100%;
+    float: left;
+    background-color: #39424b;
+}
+
+.module_view_left{
+    width: 50%;
+    padding-top: 100px;
+    float: left;
+}
+
+.module_view_right{
+    width: 50%;
+    padding-top: 100px;
+    float: left;
+}
+.module_view_right ul li{
+    float: left;
+    width: 95px;
+    height: 85px;
+    padding: 20px;
+    text-align: center;
+}
+
+.module_view_img{
+    width: 41px;
+    height: 41px;
+}
+
+.module_view_lab{
+    color: #5d5c5c;
+    font-size: 14px;
+    margin-top: 15px;
+}
+
+.foot_view{
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.foot_view_ul{
+    float: left;
+    width: 20%;
+    padding-top: 20px;
+}
+.foot_view_ul li:first-child{
+    color: white;
+    font-size: 16px;
+    line-height: 60px;
+}
+
+.foot_view_ul a{
+    color: #a2a5a8;
+    font-size: 12px;
+    line-height: 24px;
+}
+.foot_view_bottom span ,.foot_view_middle span {
+    color: #a2a5a8;
+    font-size: 12px;
+}
+
+.foot_view_ul a:hover{
+    color: white;
+}
+
+.foot_view_top,.foot_view_middle,.foot_view_bottom{
+    width: 100%;
+    float: left;
+}
+
+.foot_view_middle{
+    margin-top: 40px;
+    height: 72px;
+    border-bottom: #4d555d 1px solid;
+    border-top: #4d555d 1px solid;
+}
+.foot_middlel span{
+    float: left;
+    height: 20px;
+    margin-top: 25px;
+    padding: 0 20px 0 0;
+}
+.foot_middler{
     float: right;
-    z-index:2;
+}
+.foot_middler img{
+    height: 41px;
+    width: 102px;
+    margin-top: 15px;
+    padding: 0 8px 0 0;
 }
