--- a/p_css/homepagecss.css
+++ b/p_css/homepagecss.css
@@ -13,12 +13,54 @@
     float: left;
     position: relative;
 }
-.p_head_banner{
+.banner{
     width: 100%;
     height: 620px;
     overflow: hidden;
     margin-top: 81px;
 }
+
+.banner .d1{
+    width: 100%;
+    height: 620px;
+    display: block;
+    position: absolute;
+    left: 0px;
+}
+
+.d2{
+    width: 100%;
+    height: 30px;
+    clear: both;
+    position: absolute;
+    z-index: 100;
+    left: 0px;
+    top: 640px;
+}
+.d2 ul {
+    float: left;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    margin: 0 0 0 -46px;
+    display: inline;
+}
+
+.d2 ul li{
+    width: 15px;
+    height: 15px;
+    overflow: hidden;
+    cursor: pointer;
+    background: url(../images/banner/img1.png) no-repeat center;
+    float: left;
+    margin: 0 4px;
+    display: inline;
+}
+
+.d2 ul li.nuw {
+    background: url(../images/banner/img1_1.png) no-repeat center;
+}
+
 .p_head{
     width: 1200px;
     margin: 0 auto;
@@ -63,6 +105,7 @@
     display: inline-block;
 }
 .head_title{
+    width: 60px;
     padding: 30px 20px;
     color: #333333;
     font-size: 14px;
